# E2E-ML-Pipeline

./: .pre-commit-config.yaml  Analysis.ipynb  README.md  main.py  model_pipeline.pkl  pyproject.toml  testtest.py
.github/workflows/: main.yml
e2/data_ops/: __init__.py  dataset_io.py  preprocessor.py
e2/model_training/: __init__.py  hyperparam_opt.py  model_config.yml  training.py
e2/utils/: config_validations.py  data_validations.py  logging_utils.py
mlruns/0/: meta.yaml
mlruns/423429256124531237/: meta.yaml
mlruns/423429256124531237/e6125c0935784de1a368e4b14b61e5ec/: meta.yaml
mlruns/423429256124531237/e6125c0935784de1a368e4b14b61e5ec/tags/: mlflow.runName  mlflow.source.name
tests/: test_dataset_io.py
