[tool.poetry]
name = "e2"
version = "0.1.0"
description = ""
authors = ["Neşe Uygun <nese.uygun13@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.1.1"
numpy = "^1.26.1"
pyarrow = "^13.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pre-commit = "^3.5.0"


[tool.poetry.group.linting.dependencies]
isort = "^5.12.0"
black = "^23.10.0"
flake8 = "^6.1.0"
docformatter = "^1.7.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
